fix enrollment UMA

Noticed that the enrollment UMA will be invoked through the
enrollment flow for offline demo mode. At least it shouldn't be
NOTREACHED(). Considering the situation, I believe it can be
handled as other normal enrollment.

BUG=835904
TEST=manually

Change-Id: I61d50258429f3c72132c29d58a6208736756e3d8
Reviewed-on: https://chromium-review.googlesource.com/1092092
Reviewed-by: Aga Wronska <agawronska@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569374}
Former-commit-id: e3f30d15de2f69b389142af006dc83f6d0c9f316