chrome/browser/chromeos/login/enrollment/enrollment_uma.cc
@@ -25,6 +25,7 @@ void EnrollmentUMA(policy::MetricEnrollment sample,
     case policy::EnrollmentConfig::MODE_LOCAL_ADVERTISED:
     case policy::EnrollmentConfig::MODE_SERVER_ADVERTISED:
     case policy::EnrollmentConfig::MODE_ATTESTATION:
+    case policy::EnrollmentConfig::MODE_OFFLINE_DEMO:
       base::UmaHistogramSparse(kMetricEnrollment, sample);
       break;
     case policy::EnrollmentConfig::MODE_LOCAL_FORCED:
@@ -36,13 +37,6 @@ void EnrollmentUMA(policy::MetricEnrollment sample,
       break;
     case policy::EnrollmentConfig::MODE_RECOVERY:
       base::UmaHistogramSparse(kMetricEnrollmentRecovery, sample);
-      break;
-    case policy::EnrollmentConfig::MODE_OFFLINE_DEMO:
-      // MODE_OFFLINE_DEMO is currently NOTREACHED(), since the normal
-      // enrollment flow (which invokes this function) shouldn't use this mode.
-      // TODO(mukai, agawronska): decide what needs to be done here.
-      // https://crbug.com/835904
-      NOTREACHED();
       break;
     case policy::EnrollmentConfig::MODE_NONE:
       NOTREACHED();
